32_https_ingress_pods_kv_oidc/dotnet-ingress/app-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-app-07 # nginx
  # tls:
  # - hosts:
  #   - app-07.westeurope.cloudapp.azure.com
  #   secretName: ingress-tls-cert-secret
  rules:
  # - host: app-07.westeurope.cloudapp.azure.com
  - http:
      paths:
      - path: /dotnet(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 443 # 80
      # - path: /(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: app-svc
      #       port:
      #         number: 443 # 80
